Removed dialect